// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HttpValidator validateInput() all validations are turned off returns no validation errors 1`] = `Array []`;

exports[`HttpValidator validateInput() all validations are turned on returns validation errors for whole request structure 1`] = `
Array [
  Object {
    "code": "type",
    "message": "should be boolean",
    "path": Array [
      "body",
      "completed",
    ],
    "severity": 0,
  },
  Object {
    "code": "format",
    "message": "should match format \\"date-time\\"",
    "path": Array [
      "header",
    ],
    "severity": 0,
  },
  Object {
    "code": "pattern",
    "message": "should match pattern \\"^(yes|no)$\\"",
    "path": Array [
      "query",
      "overwrite",
    ],
    "severity": 0,
  },
]
`;

exports[`HttpValidator validateOutput() all validations are turned off returns no validation errors 1`] = `Array []`;

exports[`HttpValidator validateOutput() all validations are turned on returns validation errors for whole request structure 1`] = `
Array [
  Object {
    "code": "type",
    "message": "should be boolean",
    "path": Array [
      "body",
      "completed",
    ],
    "severity": 0,
  },
  Object {
    "code": "format",
    "message": "should match format \\"date-time\\"",
    "path": Array [
      "header",
    ],
    "severity": 0,
  },
]
`;
